Views: Modified all bubbles to have an alert dialog role and deleted accessible name

This small patch fixes a few related bugs.
1. Assigned an alert dialog role for all bubbles.
An alert dialog role makes the contents of a dialog be announced by a screen reader when the dialog appears.
Bubbles are non-modal and thus should be announced as soon as they appear because otherwise the user will not know if they are there.
However, some Windows screen readers do not yet properly support the alert dialog role.
For Windows only, we can switch to the system alert role temporarily until screen reader vendors provide a fix.
2. ARIA Spec compliant?
The ARIA Spec dictates that an alert dialog role should only be used for modal dialogs.
However, there is no other spec-compliant way to announce the contents of a dialog.
3. Deleted accessible name from any dialogs.
The ARIA Spec also dictates that alert dialogs should have an accessible name.
However, this patch modifies Views. In Views all dialogs have a title bar.
Having both an accessible name and a title bar makes Windows screen readers announce the title twice.
4. Applied to all bubbles by default.
Since most bubbles are non-modal and need to be announced as soon as they appear, alert dialog should become the default role.
Subclasses can override if needed and switch back to a dialog role.
Having a role of dialog doesn't announce anything on Windows when the dialog is non-modal.

R=dtseng@chromium.org, aleventhal@chromium.org

Bug: 775705, 779297, 474622
Change-Id: I062110757cd4c400b31aa3cb89c622002699408e
Tested: Jaws and NVDA with permission, password save and zoom bubbles.
Reviewed-on: https://chromium-review.googlesource.com/967465
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546891}
Former-commit-id: dd19640f93eb1a82a0f2cba3d6231f307e0faef4